--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ and open the template in the editor.
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/popper.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
-
+        <script src="js/owl.carousel.min.js" type="text/javascript"></script>
 
 
 
