--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ and open the template in the editor.
             <section class="lead-slider-wrapper">
 
                 <ul class="lead-slider list-unstyled owl-carousel">
-                    <li style="background-image: url(img/slider.jpg)">
+                    <li style="background-image: url(img/slide-01.png)">
 
                         <div class="container text-center text-white">
                             <h1>
@@ -109,7 +109,7 @@ and open the template in the editor.
                             </a>
                         </div>
                     </li>
-                    <li style="background-image: url(img/slider.jpg)">
+                    <li style="background-image: url(img/slide-01.png)">
 
                         <div class="container text-center text-white">
                             <h1>
@@ -123,7 +123,7 @@ and open the template in the editor.
                             </a>
                         </div>
                     </li>
-                    <li style="background-image: url(img/slider.jpg)">
+                    <li style="background-image: url(img/slide-01.png)">
 
                         <div class="container text-center text-white">
                             <h1>
